# poke-data

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yaml
parse/: Cargo.toml
parse/src/: lib.rs  models.rs  raw_assets.rs  raw_data.rs  traits.rs
parse/src/models/: poke_api.rs
parse/src/models/poke_api/: ability.rs  ability_changelog.rs  ability_changelog_prose.rs  ability_flavor_text.rs  ability_names.rs  ability_prose.rs  berries.rs  berry_firmness.rs  berry_firmness_names.rs  berry_flavors.rs  contest_effect_prose.rs  contest_effects.rs  contest_type_names.rs  contest_types.rs  egg_group.rs  egg_group_prose.rs  encounter.rs  encounter_condition_prose.rs  encounter_condition_value_map.rs  encounter_condition_value_prose.rs  encounter_condition_values.rs  encounter_conditions.rs  encounter_method_prose.rs  encounter_methods.rs  encounter_slots.rs  evolution_chains.rs  evolution_trigger_prose.rs  evolution_triggers.rs  evolutions.rs  experience.rs  generation.rs  generation_names.rs  growth_rate_prose.rs  growth_rates.rs  item_categories.rs  item_category_prose.rs  item_flag_map.rs  item_flag_prose.rs  item_flags.rs  item_flavor_text.rs  (+78 more)
parse/src/traits/: get_model.rs  has_flavor_text.rs  has_id.rs  has_localized_effects.rs  has_localized_name.rs  has_localized_name_description.rs  into_model.rs
src/: assets.rs  collections.rs  data.rs  data_structures.rs  lib.rs  models.rs  tests.rs  traits.rs  types.rs
src/collections/: abilities.rs  berries.rs  egg_groups.rs  generations.rs  item_categories.rs  items.rs  location_areas.rs  moves.rs  (+7 more)
(+76 files in other folders)
