[package]
name = "poke-data"
description = "Comprehensible and locally available Pokémon data."
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Zitronenjoghurt/poke-data"
include = [
    "src/*",
    "data.bin"
]

[dependencies]
bincode = "1.3.3"
image = { version = "0.25.6", default-features = false, features = ["png"] }
oxipng = "9.1.5"
serde = { version = "1.0.219", features = ["derive"] }
strsim = "0.11.1"
zstd = "0.13.3"
