[package]
name = "poke-data-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
csv = "1.3.1"
poke-data = { path = ".." }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
zstd = "0.13.3"

[[bin]]
name = "generate-data"
path = "bin/generate_data.rs"
